reportbug (3.13) unstable; urgency=low

  * Fix redirects in urlutils under Python 2.4.  (Closes: #309671)
  * Really quit when using 'q' at editor prompt.  (Closes: #299425, again)
  * Skip vi nag if in template mode.  (Closes: #309717)
  * Fix grammar in "specify bug by number" message in querybts.
    (Closes: #310723)

 --

reportbug (3.12) unstable; urgency=low

  * Really install French man page.  (Closes: #297998)
  * Add Japanese man page, from Ippei Tamura.  (Closes: #306955)
  * Fix typo in querybts man page.  (Closes: #306370)
  * Include /bin/sh symlink's target.  (Closes: #296421)
  * Send presubj messages through the pager.  (Closes: #294697)
  * Add upgrade-reports pseudo package.  (Closes: #294822)
  * Add 'q' to the editor prompt.  (Closes: #299425)
  * Use dlocate if available instead of dpkg --search.  (Closes: #289228)
  * Nag novice users if they use vi.  (Closes: #299172)
  * When calling an MTA, separate addresses with spaces rather than
    commas.  (Closes: #308293, #308543)
  
 -- Chris Lawrence <lawrencc@debian.org>  Tue, 10 May 2005 17:24:01 -0500

reportbug (3.11) unstable; urgency=low

  * Fix UnboundLocalError introduced in fix for 306343. (Closes: #306518)

 -- Chris Lawrence <lawrencc@debian.org>  Wed, 27 Apr 2005 01:37:00 -0500

reportbug (3.10) unstable; urgency=low

  * Suppress package-provided information if --no-config-files is
    specified.  (Closes: #306343)

 -- Chris Lawrence <lawrencc@debian.org>  Mon, 25 Apr 2005 22:33:24 -0500

reportbug (3.9) unstable; urgency=medium

  * Respect Bccs when using MTAs and MUAs; note that broken MUAs may fail
    to suppress the Bcc field when they send, and that's not my
    problem--blame the MUA author.  However, this code works around broken
    MTAs.  Note that smtphost behavior was correct in 3.8.
    (Closes: #298919, #297452)

 -- Chris Lawrence <lawrencc@debian.org>  Sun, 20 Mar 2005 18:10:35 -0600

reportbug (3.8) unstable; urgency=medium
